# ot-harjoitustyo

./: .coveragerc  .env.prod  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: arkkitehtuuri.md  kayttoohje.md  testausdokumentaatio.md  tyoaikakirjanpito.md  työaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/maksukortti_v2/unicafe/: tasks.py
laskarit/viikko2/maksukortti_v2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: notes.txt
src/: conftest.py  db_connector.py  index.py  initialize_db.py
src/models/: expense_row.py  sale_row.py  user.py
src/repositories/: expenses_repository.py  sales_repository.py  user_repository.py
src/services/: accounting_service.py  expense_row_service.py  sale_row_service.py  user_service.py
src/tests/: accounting_service_test.py  expense_row_service_test.py  expenses_repository_test.py  sale_row_service_test.py  sales_repository_test.py  user_repository_test.py  user_service_test.py
src/views/: home_view.py  infotext.py  ui.py  user_view.py
